# ploterm

./: CMakeLists.txt  Makefile  README.md  ascii_graph.cpp  colormaps.hpp  colormaps.json  license.txt  numpy.i  plot_utils.py  ploterm.cpp  ploterm.h  ploterm.i  test.py
